Add data source attribution

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     path {
         fill: #ccc,
         stroke: #fff,
-        stroke-width: .5px;
+        stroke-width: 0.5px;
     }
 
     path:hover {
@@ -50,3 +50,6 @@
     </script>
 
 </body>
+<footer>
+Data Source: US Census Bureau
+</footer>
